tests/integration/snapshots/integration__reference__entry_definition_include_declaration.snap
---
source: tests/integration/reference.rs
assertion_line: 98
expression: result
---
[
  {
    "range": {
      "end": {
        "character": 9,
        "line": 0
      },
      "start": {
        "character": 6,
        "line": 0
      }
    },
    "uri": "[tmp]/bar.tex"
  },
  {
    "range": {
      "end": {
        "character": 12,
        "line": 0
      },
      "start": {
        "character": 9,
        "line": 0
      }
    },
    "uri": "[tmp]/foo.bib"
  }
]
