tests/integration/snapshots/integration__reference__entry_reference.snap
---
source: tests/integration/reference.rs
assertion_line: 138
expression: result
---
[
  {
    "range": {
      "end": {
        "character": 9,
        "line": 0
      },
      "start": {
        "character": 6,
        "line": 0
      }
    },
    "uri": "[tmp]/bar.tex"
  }
]
