tests/integration/snapshots/integration__reference__label_reference_include_declaration.snap
---
source: tests/integration/reference.rs
assertion_line: 356
expression: result
---
[
  {
    "range": {
      "end": {
        "character": 8,
        "line": 0
      },
      "start": {
        "character": 5,
        "line": 0
      }
    },
    "uri": "[tmp]/bar.tex"
  },
  {
    "range": {
      "end": {
        "character": 8,
        "line": 0
      },
      "start": {
        "character": 5,
        "line": 0
      }
    },
    "uri": "[tmp]/baz.tex"
  },
  {
    "range": {
      "end": {
        "character": 10,
        "line": 0
      },
      "start": {
        "character": 7,
        "line": 0
      }
    },
    "uri": "[tmp]/foo.tex"
  }
]
