tests/integration/snapshots/integration__reference__string_definition.snap
---
source: tests/integration/reference.rs
assertion_line: 391
expression: result
---
[
  {
    "range": {
      "end": {
        "character": 26,
        "line": 2
      },
      "start": {
        "character": 23,
        "line": 2
      }
    },
    "uri": "[tmp]/main.bib"
  }
]
