tests/integration/snapshots/integration__reference__string_reference_include_declaration.snap
---
source: tests/integration/reference.rs
assertion_line: 496
expression: result
---
[
  {
    "range": {
      "end": {
        "character": 11,
        "line": 0
      },
      "start": {
        "character": 8,
        "line": 0
      }
    },
    "uri": "[tmp]/main.bib"
  },
  {
    "range": {
      "end": {
        "character": 26,
        "line": 2
      },
      "start": {
        "character": 23,
        "line": 2
      }
    },
    "uri": "[tmp]/main.bib"
  }
]
